# new_project_AI

./: DATA_CONTRACT.md  DECISIONS.md  DEVELOPMENT_WORKFLOW.md  EXPERIMENT_TRACKING.md  GLOSSARY.md  MANIFEST_SCHEMAS.md  REPO_CONVENTIONS.md  REPO_SKELETON.md  TESTING_STRATEGY.md  main_tech.md  module_eval.md  module_net_train.md  module_postprocess_vectorized.md  module_prep_data.md  module_target_predict.md  pyproject.toml  require.txt
.ai/instructions/: README.md  gdal_raster.instructions.md  manifests.instructions.md  postprocess.instructions.md  python.instructions.md  testing.instructions.md  torch.instructions.md
docs/: IMPLEMENTATION_PLAN.md  INDEX.md  README (4).md  README.md  module_eval_runner.md  module_net_train_multi_size_usage.md  module_net_train_runner.md  module_postprocess_vectorize_runner.md  module_prep_data_multi_size.md  module_prep_data_run_guide.md  module_prep_data_runner.md  module_target_predict_runner.md  progress_reporting.md
prompts/: README.md  module_eval_prompt.md  module_net_train_prompt.md  module_postprocess_vectorize_prompt.md  module_prep_data_prompt.md  module_target_predict_prompt.md  review_hidden_fallbacks_prompt.md
src/ai_fields/common/: constants.py  (+5 more)
templates/: README.md  config_used.template.yaml  handoff.template.md  manifest.template.json  run_report.template.md  summary.template.json
tests/: conftest.py
tools/: collect_postprocess_sprint_a_results.py  run_module_eval.sh  run_module_net_train.sh  run_module_postprocess_vectorize.sh  run_module_prep_data.sh  run_module_target_predict.sh  run_postprocess_sprint_a.sh
(+139 files in other folders)
